<resources>
    <string name="app_name">QuizApp</string>
    <string name="question01">Who is the singer of \"umbrella\"?</string>
    <string name="hint">Enter your answer here</string>
    <string name="question2">Who is the singer of \"SexyBack?\"</string>
    <string name="question03">Who recorded \"Confessions on a Dancefloor?\"</string>
    <string name="question03_option01">Madonna</string>
    <string name="question03_option02">Britney</string>
    <string name="question03_option03">Dido</string>
    <string name="question03_option04">Kelly Clarkson</string>
    <string name="question04">Who recorded \"By the way\"?</string>
    <string name="question04_option01">Linkin Park</string>
    <string name="question04_option02">Red Hot Chilli Peppers</string>
    <string name="question04_option03">Stone Sour</string>
    <string name="question04_option04">Slipknot</string>
    <string name="question05">The first single of J.Lo?</string>
    <string name="question05_option01">\"I\'m real\"</string>
    <string name="question05_option02">\"Waiting for tonight\"</string>
    <string name="question05_option03">\"Love don\'t cost a thing\"</string>
    <string name="question05_option04">\"If You Had My Love\"</string>
    <string name="question06">Who recorded \"In the end\"?</string>
    <string name="question06_option01">Metallica</string>
    <string name="question06_option02">Linkin Park</string>
    <string name="question06_option03">Limp Bizkit</string>
    <string name="question06_option04">Hoobastank</string>
    <string name="question07">Choose Members of Maroon 5</string>
    <string name="question07_option01">Adam Levine</string>
    <string name="question07_option02">Ryan Dusick</string>
    <string name="question07_option03">Serj Tankian</string>
    <string name="question07_option04">Corey Taylor</string>
    <string name="question08">Who recorded \"Back to Black\"?</string>
    <string name="question08_option01">Shakira</string>
    <string name="question08_option02">Sia</string>
    <string name="question08_option03">Lady Gaga</string>
    <string name="question08_option04">Amy Winehouse</string>
    <string name="question09">Choose Members of Linkin Park</string>
    <string name="question09_option01">Mike Shinoda</string>
    <string name="question09_option02">Lars Ulrich</string>
    <string name="question09_option03">Jonathan Davis</string>
    <string name="question09_option04">Chester Benington</string>
    <string name="question10">Who recorded \"Blackout\"?</string>
    <string name="question10_option01">Timbaland</string>
    <string name="question10_option02">Britney</string>
    <string name="question10_option03">Foo Fighters</string>
    <string name="question10_option04">Limp Bizkit</string>
    <string name="finalScoreMessage01">Perfect! Your Score is 10/10!</string>
    <string name="finalScoreMessage02">That\'s cool! Your Score is</string>
    <string name="finalScoreMessage03">Try again! Your Score is</string>
    <string name="submitButton">Total Score</string>
</resources>
